Feature Selection and OVR

--- a/Notebooks/Training/AdaBoost Classifier Hyperparameter Search.ipynb
+++ b/Notebooks/Training/AdaBoost Classifier Hyperparameter Search.ipynb
@@ -117,6 +117,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "themes = [\"Calm\",\"Cheerful\",\"Bravery\",\"Fearful\",\"Love\",\"Sadness\"]\n",
+    "ovr_train = []\n",
+    "ovr_val = []\n",
+    "ovr_y_smote = []\n",
+    "ovr_y_os = []\n",
+    "for i in range(1,7):\n",
+    "    ovr_train.append(ovr_labels(y_train, i))\n",
+    "    ovr_val.append(ovr_labels(y_val,i))\n",
+    "    ovr_y_os.append(ovr_labels(y_os,i))\n",
+    "    ovr_y_smote.append(ovr_labels(y_smote,i))    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -243,8 +261,11 @@
     }
    ],
    "source": [
-    "print_res(\"Vanilla\",x_train,y_train,random_search_adaboost)\n",
-    "test_res(\"Vanilla\",x_val,y_val,random_search_adaboost)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Vanilla\",x_train,ovr_train[i],random_search_adaboost, themes[i], verbose = False)\n",
+    "    test_res(\"Vanilla\",x_val,ovr_val[i],random_search_adaboost, themes[i])"
    ]
   },
   {
@@ -306,8 +327,11 @@
     }
    ],
    "source": [
-    "print_res(\"Random Oversampling\",x_os,y_os,random_search_adaboost)\n",
-    "test_res(\"Random Oversampling\",x_val,y_val,random_search_adaboost)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Random Oversampling\",x_os,ovr_y_os[i],random_search_adaboost,themes[i], verbose = False)\n",
+    "    test_res(\"Random Oversampling\",x_val,ovr_val[i],random_search_adaboost,themes[i])"
    ]
   },
   {
@@ -369,8 +393,11 @@
     }
    ],
    "source": [
-    "print_res(\"SMOTE\",x_smote,y_smote,random_search_adaboost)\n",
-    "test_res(\"SMOTE\",x_val,y_val,random_search_adaboost)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"SMOTE\",x_smote,ovr_y_smote[i],random_search_adaboost,themes[i])\n",
+    "    test_res(\"SMOTE\",x_val,ovr_val[i],random_search_adaboost,themes[i])"
    ]
   }
  ],
