--- a/Notebooks/Training/SVM Hyperparameter Search.ipynb
+++ b/Notebooks/Training/SVM Hyperparameter Search.ipynb
@@ -13,10 +13,12 @@
     "from sklearn import svm\n",
     "# from sklearn.naive_bayes import ComplementNB, MultinomialNB\n",
     "import numpy as np\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from scipy.stats import uniform, norm\n",
     "from sklearn.metrics import plot_confusion_matrix\n",
     "from imblearn.over_sampling import SMOTE, RandomOverSampler\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.feature_selection import SelectFromModel, SelectKBest, VarianceThreshold, chi2, f_classif, mutual_info_classif\n",
     "\n",
     "from XLB import *\n",
     "\n",
@@ -43,32 +45,35 @@
     }
    ],
    "source": [
+    "# extract data from files\n",
     "x_train, y_train = extract_data(\"FinalTrainingSet.csv\")\n",
     "x_val, y_val = extract_data(\"Validation Set.csv\")\n",
-    "scaler = StandardScaler()\n",
+    "\n",
+    "# scale data values\n",
+    "scaler = MinMaxScaler()\n",
     "scaler.fit(x_train)\n",
     "x_train = scaler.transform(x_train)\n",
+    "x_val = scaler.transform(x_val)\n",
     "\n",
-    "scaler_val = StandardScaler()\n",
-    "scaler.fit(x_val)\n",
-    "x_val = scaler.transform(x_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(750, 324) (750,)\n",
-      "(750, 324) (750,)\n"
-     ]
-    }
-   ],
-   "source": [
+    "# feature selection\n",
+    "num_features = 45\n",
+    "feat_sel = VarianceThreshold()\n",
+    "x_train = feat_sel.fit_transform(x_train)\n",
+    "# WINNER : 47.62% 0.43\n",
+    "feat_sel_2 = SelectFromModel(estimator=DecisionTreeClassifier(random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=RandomForestClassifier(n_estimators=100,\\\n",
+    "#                                              random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=LogisticRegression(random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=svm.LinearSVC(C=0.01, penalty=\"l1\", dual=False,\\\n",
+    "#                                     random_state=481516234))\n",
+    "# feat_sel_2 = SelectKBest(mutual_info_classif,k=num_features)\n",
+    "x_train = feat_sel_2.fit_transform(x_train,y_train)\n",
+    "x_val = feat_sel_2.transform(feat_sel.transform(x_val))\n",
+    "# print(\"After Variance Threshold Feature Selection:\",x_train.shape)\n",
+    "\n",
     "rand_seed = 3454132\n",
     "\n",
     "oversampler = SMOTE(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
@@ -79,6 +84,24 @@
     "                                random_state=rand_seed)\n",
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
     "print(x_os.shape,y_os.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "themes = [\"Calm\",\"Cheerful\",\"Bravery\",\"Fearful\",\"Love\",\"Sadness\"]\n",
+    "ovr_train = []\n",
+    "ovr_val = []\n",
+    "ovr_y_smote = []\n",
+    "ovr_y_os = []\n",
+    "for i in range(1,7):\n",
+    "    ovr_train.append(ovr_labels(y_train, i))\n",
+    "    ovr_val.append(ovr_labels(y_val,i))\n",
+    "    ovr_y_os.append(ovr_labels(y_os,i))\n",
+    "    ovr_y_smote.append(ovr_labels(y_smote,i))    "
    ]
   },
   {
@@ -156,8 +179,11 @@
     }
    ],
    "source": [
-    "print_res(\"Vanilla\",x_train,y_train,random_search_nu)\n",
-    "test_res(\"Vanilla\",x_val,y_val,random_search_nu)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Vanilla\",x_train,ovr_train[i],random_search_nu, themes[i], verbose = False)\n",
+    "    test_res(\"Vanilla\",x_val,ovr_val[i],random_search_nu, themes[i])"
    ]
   },
   {
@@ -208,8 +234,11 @@
     }
    ],
    "source": [
-    "print_res(\"Random Oversampling\",x_os,y_os,random_search_nu)\n",
-    "test_res(\"Random Oversampling\",x_val,y_val,random_search_nu)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Random Oversampling\",x_os,ovr_y_os[i],random_search_nu,themes[i], verbose = False)\n",
+    "    test_res(\"Random Oversampling\",x_val,ovr_val[i],random_search_nu,themes[i])"
    ]
   },
   {
@@ -260,8 +289,58 @@
     }
    ],
    "source": [
-    "print_res(\"SMOTE\",x_smote,y_smote,random_search_nu)\n",
-    "test_res(\"SMOTE\",x_val,y_val,random_search_nu)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"SMOTE\",x_smote,ovr_y_smote[i],random_search_nu,themes[i])\n",
+    "    test_res(\"SMOTE\",x_val,ovr_val[i],random_search_nu,themes[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract data from files\n",
+    "x_train, y_train = extract_data(\"FinalTrainingSet.csv\")\n",
+    "x_val, y_val = extract_data(\"Validation Set.csv\")\n",
+    "\n",
+    "# scale data values\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(x_train)\n",
+    "x_train = scaler.transform(x_train)\n",
+    "x_val = scaler.transform(x_val)\n",
+    "\n",
+    "# feature selection\n",
+    "num_features = 45\n",
+    "feat_sel = VarianceThreshold()\n",
+    "x_train = feat_sel.fit_transform(x_train)\n",
+    "# WINNER : 42.86% 0.34\n",
+    "feat_sel_2 = SelectFromModel(estimator=DecisionTreeClassifier(random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=RandomForestClassifier(n_estimators=100,\\\n",
+    "#                                              random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=LogisticRegression(random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=svm.LinearSVC(C=0.01, penalty=\"l1\", dual=False,\\\n",
+    "#                                     random_state=481516234))\n",
+    "# feat_sel_2 = SelectKBest(mutual_info_classif,k=num_features)\n",
+    "x_train = feat_sel_2.fit_transform(x_train,y_train)\n",
+    "x_val = feat_sel_2.transform(feat_sel.transform(x_val))\n",
+    "# print(\"After Variance Threshold Feature Selection:\",x_train.shape)\n",
+    "\n",
+    "rand_seed = 3454132\n",
+    "\n",
+    "oversampler = SMOTE(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
+    "x_smote, y_smote = oversampler.fit_resample(x_train,y_train)\n",
+    "print(x_smote.shape,y_smote.shape)\n",
+    "\n",
+    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",\\\n",
+    "                                random_state=rand_seed)\n",
+    "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
+    "print(x_os.shape,y_os.shape)"
    ]
   },
   {
@@ -341,8 +420,11 @@
     }
    ],
    "source": [
-    "print_res(\"Vanilla\",x_train,y_train,random_search_svm)\n",
-    "test_res(\"Vanilla\",x_val,y_val,random_search_svm)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Vanilla\",x_train,ovr_train[i],random_search_svm, themes[i], verbose = False)\n",
+    "    test_res(\"Vanilla\",x_val,ovr_val[i],random_search_svm, themes[i])"
    ]
   },
   {
@@ -394,8 +476,11 @@
     }
    ],
    "source": [
-    "print_res(\"Random Oversampling\",x_os,y_os,random_search_svm)\n",
-    "test_res(\"Random Oversampling\",x_val,y_val,random_search_svm)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Random Oversampling\",x_os,ovr_y_os[i],random_search_svm,themes[i], verbose = False)\n",
+    "    test_res(\"Random Oversampling\",x_val,ovr_val[i],random_search_svm,themes[i])"
    ]
   },
   {
@@ -447,8 +532,58 @@
     }
    ],
    "source": [
-    "print_res(\"SMOTE\",x_smote,y_smote,random_search_svm)\n",
-    "test_res(\"SMOTE\",x_val,y_val,random_search_svm)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"SMOTE\",x_smote,ovr_y_smote[i],random_search_svm,themes[i])\n",
+    "    test_res(\"SMOTE\",x_val,ovr_val[i],random_search_svm,themes[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## extract data from files\n",
+    "x_train, y_train = extract_data(\"FinalTrainingSet.csv\")\n",
+    "x_val, y_val = extract_data(\"Validation Set.csv\")\n",
+    "\n",
+    "# scale data values\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(x_train)\n",
+    "x_train = scaler.transform(x_train)\n",
+    "x_val = scaler.transform(x_val)\n",
+    "\n",
+    "# feature selection\n",
+    "num_features = 45\n",
+    "feat_sel = VarianceThreshold()\n",
+    "x_train = feat_sel.fit_transform(x_train)\n",
+    "# feat_sel_2 = SelectFromModel(estimator=DecisionTreeClassifier(random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=RandomForestClassifier(n_estimators=100,\\\n",
+    "#                                              random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=LogisticRegression(random_state=481516234))\n",
+    "# feat_sel_2 = SelectFromModel(\\\n",
+    "#                 estimator=svm.LinearSVC(C=0.01, penalty=\"l1\", dual=False,\\\n",
+    "#                                     random_state=481516234))\n",
+    "# 28.57% 0.28\n",
+    "feat_sel_2 = SelectKBest(chi2,k=num_features)\n",
+    "x_train = feat_sel_2.fit_transform(x_train,y_train)\n",
+    "x_val = feat_sel_2.transform(feat_sel.transform(x_val))\n",
+    "# print(\"After Variance Threshold Feature Selection:\",x_train.shape)\n",
+    "\n",
+    "rand_seed = 3454132\n",
+    "\n",
+    "oversampler = SMOTE(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
+    "x_smote, y_smote = oversampler.fit_resample(x_train,y_train)\n",
+    "print(x_smote.shape,y_smote.shape)\n",
+    "\n",
+    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",\\\n",
+    "                                random_state=rand_seed)\n",
+    "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
+    "print(x_os.shape,y_os.shape)"
    ]
   },
   {
@@ -528,8 +663,11 @@
     }
    ],
    "source": [
-    "print_res(\"Vanilla\",x_train,y_train,random_search_linear)\n",
-    "test_res(\"Vanilla\",x_val,y_val,random_search_linear)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Vanilla\",x_train,ovr_train[i],random_search_linear, themes[i], verbose = False)\n",
+    "    test_res(\"Vanilla\",x_val,ovr_val[i],random_search_linear, themes[i])"
    ]
   },
   {
@@ -538,8 +676,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_res(\"Random Oversampling\",x_os,y_os,random_search_linear)\n",
-    "test_res(\"Random Oversampling\",x_val,y_val,random_search_linear)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"Random Oversampling\",x_os,ovr_y_os[i],random_search_linear,themes[i], verbose = False)\n",
+    "    test_res(\"Random Oversampling\",x_val,ovr_val[i],random_search_linear,themes[i])"
    ]
   },
   {
@@ -548,8 +689,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_res(\"SMOTE\",x_smote,y_smote,random_search_linear)\n",
-    "test_res(\"SMOTE\",x_val,y_val,random_search_linear)"
+    "for i in range(0,6):\n",
+    "    if(i > 0):\n",
+    "        print()\n",
+    "    print_res(\"SMOTE\",x_smote,ovr_y_smote[i],random_search_linear,themes[i])\n",
+    "    test_res(\"SMOTE\",x_val,ovr_val[i],random_search_linear,themes[i])"
    ]
   }
  ],
