--- a/Notebooks/Feature Mapping/Bayesian Network Logistic-Regression-Hyperparameter-Search.ipynb
+++ b/Notebooks/Feature Mapping/Bayesian Network Logistic-Regression-Hyperparameter-Search.ipynb
@@ -41,6 +41,8 @@
     "from sklearn import svm\n",
     "from XLB import *\n",
     "\n",
+    "from pomegranate import *\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -66,7 +68,14 @@
      "output_type": "stream",
      "text": [
       "(750, 69) (750,)\n",
-      "(750, 69) (750,)\n"
+      "(750, 69) (750,)\n",
+      "[[0.         0.         1.         ... 0.2919568  0.17662811 0.17661486]\n",
+      " [1.         1.         1.         ... 0.23618019 0.17934551 0.1793323 ]\n",
+      " [1.         0.         1.         ... 0.25145659 0.18423683 0.1842237 ]\n",
+      " ...\n",
+      " [1.         0.         1.         ... 0.3711809  0.20217166 0.20215882]\n",
+      " [1.         0.         0.         ... 0.34489129 0.20543254 0.20541975]\n",
+      " [1.         0.         0.         ... 0.30154896 0.20814994 0.2081372 ]]\n"
      ]
     }
    ],
@@ -108,12 +117,13 @@
     "\n",
     "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
-    "print(x_os.shape,y_os.shape)"
+    "print(x_os.shape,y_os.shape)\n",
+    "print(x_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3521,7 +3531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3557,6 +3567,21 @@
     "# printing modified list \n",
     "print (features) \n",
     "print (len(features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##BAYESIAN NETWORK\n",
+    "\n",
+    "x = x_train[0]\n",
+    "x = np.stack([x_train[0], x_train[1]])\n",
+    "#print(x)\n",
+    "\n",
+    "model = BayesianNetwork.from_samples(x, algorithm='exact')\n"
    ]
   },
   {
