Bayesian Network errors

--- a/Notebooks/Feature Mapping/Bayesian Network Logistic-Regression-Hyperparameter-Search.ipynb
+++ b/Notebooks/Feature Mapping/Bayesian Network Logistic-Regression-Hyperparameter-Search.ipynb
@@ -3571,17 +3571,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-ff9c99d64f2c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#print(x)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBayesianNetwork\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_samples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'exact'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.BayesianNetwork.from_samples\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mgenexpr\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mgenexpr\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mD:\\Applications\\Miniconda\\lib\\site-packages\\pomegranate\\BayesianNetwork.pyx\u001b[0m in \u001b[0;36mpomegranate.BayesianNetwork.ParentGraph.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "##BAYESIAN NETWORK\n",
     "\n",
     "x = x_train[0]\n",
     "x = np.stack([x_train[0], x_train[1]])\n",
-    "#print(x)\n",
+    "#print(x) \n",
     "\n",
-    "model = BayesianNetwork.from_samples(x, algorithm='exact')\n"
+    "model = BayesianNetwork.from_samples(x, algorithm='exact')\n",
+    "\n",
+    "#CPM HERE?????\n",
+    "\n",
+    "# model = BayesianNetwork(\"Bayesian Network\")\n",
+    "# model.add_states(s1, s2, s3)\n",
+    "# model.add_edge(s1, s3)\n",
+    "# model.add_edge(s2, s3)\n",
+    "# model.bake()\n",
+    "\n"
    ]
   },
   {
